lint updates